// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrambled WordApprovalIcon component renders correctly for invalid word 1`] = `
<i
  aria-hidden="true"
  class="red remove circle icon"
/>
`;

exports[`scrambled WordApprovalIcon component renders correctly for long word 1`] = `
<i
  aria-hidden="true"
  class="blue circle dot outline icon"
/>
`;

exports[`scrambled WordApprovalIcon component renders correctly for valid word 1`] = `
<i
  aria-hidden="true"
  class="green check circle icon"
/>
`;

exports[`scrambled WordApprovalIcon component renders correctly with disabled checks 1`] = `
<i
  aria-hidden="true"
  class="blue circle dot outline icon"
/>
`;
